# faceClassifier

./: .gitignore  README.md
complete/: 48ctest.c  model.c
demo/: model.c
preprocess/: exportModule.lua  module.bin.xml
src/: 12CLayer.c  12Layer.c  24CLayer.c  24Layer.c  48CLayer.c  48Layer.c  CMakeLists.txt  bpersistence.hpp  cnn.cpp  cnn.h  main.cpp  model.c  storage.cpp  storage.h
src2/: CMakeLists.txt  bin_storage.cpp  bin_storage.h  bpersistence.cpp  bpersistence.hpp  cnn.cpp  cnn.h  main.cpp  nms.cpp  storage.cpp  storage.h
